chore(init):Changement du script(essai 3)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: java
 
 script:
-    - javac Action/src/action/*.java
-    - javac Action/src/pool/*.java
+    - mkdir classes/
+    - javac -d classes/ Action/src/action/*.java
+    - javac -cp classes/ -d classes/ Action/src/pool/*.java
